--- a/styles.css
+++ b/styles.css
@@ -108,59 +108,4 @@ section h2 {
     border-radius: 5px;
 }
 
-.binary-link a:hover {
-    background: #5a6268; /* Darker gray on hover */
-}
-
-#compressietechnieken {
-    background: #f4f4f4;
-    padding: 2rem;
-}
-
-.playlist-section {
-    margin-top: 2rem;
-    text-align: center;
-}
-
-.playlist-button {
-    display: inline-block;
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    background: #6c757d; /* Gray button */
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.playlist-button:hover {
-    background: #5a6268; /* Darker gray on hover */
-}
-
-.video-section {
-    margin-top: 2rem;
-    text-align: center;
-}
-
-.video-button {
-    display: inline-block;
-    margin-top: 1rem;
-    padding: 0.5rem 1rem;
-    background: #6c757d; /* Gray button */
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.video-button:hover {
-    background: #5a6268; /* Darker gray on hover */
-}
-
-.image-section {
-    text-align: right;
-    margin: 2rem 0;
-}
-
-.image-section img {
-    max-width: 100%;
-    height: auto;
-}
+.binary-link 
